		Windows-specific changes to R
		=============================

See the file NEWS for changes that affect all versions of R.

rw1022
======

The long-running saga of importing R metafiles into Word is over;
lines are now visible in screen previews in Word.  It was necessary to
use `geometric' rather than `cosmetic' pens to achieve scalable line
widths in metafiles: Word was failing to show lines drawn with
`cosmetic' pens.

bringToTop() now works with MDI child windows as well as SDI windows.

Rcmd build/check use a different check for a directory, to work around
a bug in (some versions of) Windows Perl.

The datetime code has been modified to work around a problem reported
on a Win98 machine which caused times to be reported in GMT.  (This
seems a bug in a particular version of msvcrt.dll and few machines
were affected.)  A side-effect of the changes is that the timezone
names reported are usually more sensible (but sometimes less).

File etc/Makeconf-tests was missing from rw102Xsp.zip.

Rcmd SHLIB now supports compilation from C++ sources.


rw1021
======

Pipe connections now work under RGui and embedded R.dll, although
slower than under Rterm, and as they run with no stdin or stdout to
inherit what you can do with them is limited.  They work better for
reading than writing.

The installer will no longer crash trying to install addons with a
long PATH and R_HOME not set.  Similarly, Rcmd accepts long paths.

Using Rcmd INSTALL with an incorrect path specification ending in \ no
longer runs amok.

Internal pager no longer fails when given a file of one line and no
line ending.

Hyperlinks to other packages in CHTML files launched by help() will
now work irrespective of the working directory (but like HTML, only
to packages in the same library).  The .chm files do need to be
re-built under this version.

help(, winhelp=TRUE) will now find alias topics as well as main items.

Hitting the total memory allocation limit set by --max-mem-size will