@@ -3,6 +3,7 @@
 
 See the file NEWS for changes that affect all versions of R.
 
+
 rw1022
 ======
 
@@ -26,6 +27,11 @@ names reported are usually more sensible (but sometimes less).
 File etc/Makeconf-tests was missing from rw102Xsp.zip.
 
 Rcmd SHLIB now supports compilation from C++ sources.
+
+Rterm now saves and resets the console window title.
+
+On Win2k, system(intern=TRUE) was failing to reset stderr to the console.
+
 
 
 rw1021
@@ -71,6 +77,7 @@ like cat(paste(outlines, "", collapse="\n)) to output a single string.
 The initial rescaling is no longer done for windows(rescale="fixed"),
 and the scrollbars in that mode are more responsive but move the
 viewport 20 pixels at a time.
+
 
 
 rw1020
